--- a/client/src/styles/stars.scss
+++ b/client/src/styles/stars.scss
@@ -33,7 +33,7 @@ $medium-speed: 125s;
 $big-speed: 200s;
 
 .stars-cont {
-	z-index: 1;
+	z-index: 0;
 	position: fixed;
 	top: 0;
 	left: 55px;
